--- a/src/app/components/products/pad/c-pad/c-pad.component.html
+++ b/src/app/components/products/pad/c-pad/c-pad.component.html
@@ -48,11 +48,11 @@
                             </div>
 
                             <div class="second">
-                        <h2 >Diseño innovador</h2>
+                        <h2 >Redescubre lo que una tablet puede hacer </h2>
                         <p>
-                            En el corazón de cada creación, nos esforzamos por innovar y combinar
-                            las últimas tecnologías con una estética atemporal, brindando
-                            experiencias que sean a la vez prácticas y extraordinarias.
+                            Diseñado para quienes buscan lo mejor en tecnología, nuestro cPad combina potencia, estilo y versatilidad en un solo dispositivo. Ya sea que lo uses para trabajar, estudiar o disfrutar de tus momentos de ocio, su rendimiento excepcional y su diseño elegante lo convierten en la opción perfecta.
+
+Con una pantalla de alta definición que cautiva los sentidos, una batería que te acompaña todo el día y una capacidad de almacenamiento adaptada a tus necesidades, el cPad redefine lo que significa la productividad y el entretenimiento.
                         </p>
                         </div>
                     </div>
