--- a/src/app/components/products/watch/c-watch/c-watch.component.html
+++ b/src/app/components/products/watch/c-watch/c-watch.component.html
@@ -1,1 +1,82 @@
-<p>c-watch works!</p>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wave Tee</title>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="header-left">
+
+                <div class="image-box">
+                    <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/MXM83ref_FV99_VW_34FR+watch-case-46-aluminum-rosegold-nc-s10_VW_34FR+watch-face-46-aluminum-rosegold-s10_VW_34FR?wid=750&hei=712&trim=1%2C0&fmt=p-jpg&qlt=95&.v=1725645481882" alt="side-image1" class="side-image">
+                </div>
+                
+                <div class="image-box">
+                    <img src="https://phonesstorekenya.com/wp-content/uploads/2020/10/Apple-Watch-Series-6-f.jpg" alt="side-image1" class="side-image">
+                </div>    
+
+                <div class="image-box">    
+                <img src="https://content2.rozetka.com.ua/goods/images/big/284662943.jpg" alt="side-image3" class="side-image">
+                </div>
+
+                <div class="image-box">
+                <img src="https://i.ebayimg.com/images/g/5TQAAOSwirhm2aCu/s-l400.png" alt="side-image4" class="side-image">
+                </div>
+                
+           </div>
+            
+
+            <div class="header-center">
+                <img id="main-image" src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/MXM83ref_FV99_VW_34FR+watch-case-46-aluminum-rosegold-nc-s10_VW_34FR+watch-face-46-aluminum-rosegold-s10_VW_34FR?wid=750&hei=712&trim=1%2C0&fmt=p-jpg&qlt=95&.v=1725645481882" alt="Logo">
+            </div>
+            <div class="header-right">
+                <div class="header-right">
+                    <div class="product-info">
+
+                        <h1 id ="title">cWatch</h1> 
+
+                            <div class="first">
+                        
+                                <h2>Diseño innovador</h2>
+                        <p>
+                            En el corazón de cada creación, nos esforzamos por innovar y combinar
+                            las últimas tecnologías con una estética atemporal, brindando
+                            experiencias que sean a la vez prácticas y extraordinarias.
+                        </p>
+                            </div>
+
+                            <div class="second">
+                        <h2 >Descubre el reloj inteligente que transformará tu día a día.</h2>
+                        <p>
+                            
+
+Nuestro reloj inteligente no es solo un accesorio, es tu aliado perfecto para mantenerte conectado y alcanzar tus metas. Diseñado con estilo, funcionalidad y tecnología de punta, este dispositivo combina todo lo que necesitas:
+                        </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="product-container">
+            <img id="main-product-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUkcHan15OzrVUg4FWm4oiC5de8nBPxUqolw&s" alt="cPad" class="product-image">
+            <div class="product-details">
+                <h1>cWatch</h1>
+                <p class="description">Arma tu producto a tu gusto  </p>
+                <span class="price">Desde $400.00</span>
+                <a [routerLink]="['/buyWatch']" class="add-to-cart" >Armar producto</a>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; cirOS. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+
+</body>
+
+    
+
