--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="bottom-wrapper">
       <button type="submit" class="buy-button" (click)="generarPago()">Comprar</button>
-      <button type="submit" class="buy-button" (click)="generarPago()"><a [routerLink]="['/']">Agregar</a></button>
+      <button type="submit" class="buy-button" ><a [routerLink]="['/']">Agregar</a></button>
     </div>
   </div>
 </section>
