--- a/src/app/components/products/phone/c-phone/c-phone.component.html
+++ b/src/app/components/products/phone/c-phone/c-phone.component.html
@@ -1,25 +1,4 @@
-<section class="main">
-    <section>
-        <div class="global-wrapper-3d">
-            <div class="top-wrapper">
-                <strong><h2>Un paso mas cerca</h2></strong>
-            </div>
-            <div id="modelo">
-                <spline-viewer url="https://prod.spline.design/8EUkXdjXSJbY4dqB/scene.splinecode"></spline-viewer>
-            </div>
-            <div class="bottom-wrapper">
-                <strong><h2>de vivir al maximo.</h2></strong>
-            </div>
-        </div>    
-    </section>
-    <section>
-        <div>
-            
-        </div>
-    </section>
-</section>
 
-<!-- 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,13 +8,13 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img src="https://www.techieyard.com/wp-content/uploads/2022/10/landscape-front.png" alt="side-image1" class="side-image">
-                <img src="https://creatoom.com/wp-content/uploads/2022/11/iphone-14-pro-on-white-background-v5-front-view.jpg" alt="side-image1" class="side-image">
-                <img src="https://i.pinimg.com/originals/44/90/3f/44903f40779b14832a41d814a513eb8c.jpg" alt="side-image3" class="side-image">
+                <img src="https://www.molex.com.ar/wp-content/uploads/2023/09/IPHONE-14-PRO-MAX-101-600x600.jpeg" alt="side-image1" class="side-image">
+                <img src="https://tienda.personal.com.ar/images/720/webp/i_Phone_14_Pro_Deep_Purple_303ce73cf6.png" alt="side-image1" class="side-image">
+                <img src="https://www.molex.com.ar/wp-content/uploads/2023/09/IPHONE-14-PRO-MAX-104-600x600.jpeg" alt="side-image3" class="side-image">
                 <img src="https://img.freepik.com/psd-premium/mockup-telefono-inteligente_669874-6784.jpg" alt="side-image4" class="side-image">
             </div>
             <div class="header-center">
-                <img id="main-image" src="https://cdn.dxomark.com/wp-content/uploads/drafts/post-178568/Apple-iPhone-16-Pro-Max_featured-image-packshot-review.png" alt="Logo">
+                <img id="main-image" src="https://www.molex.com.ar/wp-content/uploads/2023/09/IPHONE-14-PRO-MAX-101-600x600.jpeg" alt="Logo">
             </div>
             <div class="header-right">
                 <div class="header-right">
@@ -54,11 +33,9 @@
                             </div>
 
                             <div class="second">
-                        <h2 >Diseño innovador</h2>
+                        <h2 >Descubre el celular que revolucionará tu forma de conectarte</h2>
                         <p>
-                            En el corazón de cada creación, nos esforzamos por innovar y combinar
-                            las últimas tecnologías con una estética atemporal, brindando
-                            experiencias que sean a la vez prácticas y extraordinarias.
+                            Nuestro celular no es solo un teléfono, es tu compañero ideal para mantenerte siempre conectado y optimizar tu día a día. Con un diseño elegante, rendimiento excepcional y tecnología avanzada, este dispositivo reúne todo lo que buscas:
                         </p>
                         </div>
                     </div>
@@ -83,7 +60,7 @@
     <script src="script.js"></script>
 
 </body>
--->
+
 
 
 
