--- a/src/app/components/products/phone/c-phone/c-phone.component.css
+++ b/src/app/components/products/phone/c-phone/c-phone.component.css
@@ -1,155 +1,53 @@
-.main{
-    width: 100%;
-    grid-gap: 12px;
-    grid-template-areas: "";
-    grid-template-columns: repeat(1, 1fr);
-    display: grid;
-}
-
-
-.global-wrapper-3d{
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
-.top-wrapper{
-    color: white;
-    width: 900px;
-    display: flex;
-    justify-content: flex-start;
-}
-
-.top-wrapper > strong{
-    margin-top: 40px;
-    margin-left: 40px;
-    font-size: 30px;
-    animation: slideInLeft 2s ease-out forwards;
-}
-
-#modelo{
-    height: 800px;
-    width: 800px;
-
-}
-
-.bottom-wrapper{
-    color: white;
-    width: 900px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-
-.bottom-wrapper > strong{
-    margin-bottom: 40px;
-    margin-right: 40px;
-    font-size: 30px;
-    animation: slideInRight 2s ease-out forwards;
-}
-
-/* animacion texto */
-
-@keyframes slideInLeft {
-    0% {
-      transform: translateX(-100%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes slideInRight {
-    0% {
-      transform: translateX(100%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-  }
-
-  /* fin animacion */
-
-.global-wrapper-scroll{
-    background-color: grey;
-}
-
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  /**
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
 .header-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .header-left a {
-    margin: 0 15px;
-    text-decoration: none;
-    color: #222;
+  margin: 0 15px;
+  text-decoration: none;
+  color: #222;
 }
 
 .header-right {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .product-info {
-    margin-bottom: 20px;
-    max-width: 300px;
-    font-size: 14px;
-    color: #333;
+  margin-bottom: 20px;
+  max-width: 300px;
+  font-size: 14px;
+  color: #333;
 }
 
 .product-info h2 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .product-info p {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
-/* 
+/* Separator Line */
 .product-container {
   border-top: 1px solid #ccc;
   margin-top: 20px;
@@ -161,6 +59,11 @@
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 70px;
+}
+
+#main-product-image {
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .second{
@@ -223,14 +126,26 @@ footer {
   text-align: center;
   padding: 20px;
   background-color: #f1f1f1;
+}   
+
+.image-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10%;
+
 }
 
 .header-left img {
-  display: flex;
+  display:flex;
   flex-direction: column;
   align-items:flex-start;
   width: 250px;
   height: 150px;
+  max-width: fit-content;
+  max-height: fit-content;
+  margin-bottom: 10%;
+      
+
 }
-  
-  */
